# mod_baidu_asr

./: .gitignore  CMakeLists.txt  README.md  mod_baidu_asr.cpp
asr-linux-cpp-demo/: changelog.txt
asr-linux-cpp-demo-3.0.0.30628d440-V1/: clean.sh
asr-linux-cpp-demo-3.0.0.30628d440-V1/include/ASR/: bds_asr_key_definitions.hpp
asr-linux-cpp-demo-3.0.0.30628d440-V1/sample/asr/: Makefile
asr-linux-cpp-demo-3.0.0.30628d440-V1/sample/asr/src/: main.cpp
